mp2/DMA_example/partB.sdk/.metadata/.plugins/org.eclipse.cdt.ui/standalone_bsp_0_xaxidma_example_sg_poll_1.build.log
16:57:16 **** Build of configuration Debug for project standalone_bsp_0_xaxidma_example_sg_poll_1 ****
make all 
'Building file: ../src/xaxidma_example_sg_poll.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xaxidma_example_sg_poll.o" -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/xaxidma_example_sg_poll.d" -MT"src/xaxidma_example_sg_poll.d" -o "src/xaxidma_example_sg_poll.o" "../src/xaxidma_example_sg_poll.c"
../src/xaxidma_example_sg_poll.c:119:2: warning: #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, DEFAULT SET TO 0x01000000 [-Wcpp]
 #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, \
  ^
'Finished building: ../src/xaxidma_example_sg_poll.c'
' '
'Building file: ../src/xaxidma_multichan_sg_intr.c'
'Invoking: ARM gcc compiler'
arm-xilinx-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xaxidma_multichan_sg_intr.o" -I../../standalone_bsp_0/ps7_cortexa9_0/include -MMD -MP -MF"src/xaxidma_multichan_sg_intr.d" -MT"src/xaxidma_multichan_sg_intr.d" -o "src/xaxidma_multichan_sg_intr.o" "../src/xaxidma_multichan_sg_intr.c"
../src/xaxidma_multichan_sg_intr.c:125:2: warning: #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, DEFAULT SET TO 0x01000000 [-Wcpp]
 #warning CHECK FOR THE VALID DDR ADDRESS IN XPARAMETERS.H, \
  ^
../src/xaxidma_multichan_sg_intr.c: In function 'main':
../src/xaxidma_multichan_sg_intr.c:143:21: error: 'XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID' undeclared (first use in this function)
 #define TX_INTR_ID  XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID
                     ^
../src/xaxidma_multichan_sg_intr.c:342:43: note: in expansion of macro 'TX_INTR_ID'
  Status = SetupIntrSystem(&Intc, &AxiDma, TX_INTR_ID,
                                           ^
../src/xaxidma_multichan_sg_intr.c:143:21: note: each undeclared identifier is reported only once for each function it appears in
 #define TX_INTR_ID  XPAR_FABRIC_AXIDMA_0_MM2S_INTROUT_VEC_ID
                     ^
../src/xaxidma_multichan_sg_intr.c:342:43: note: in expansion of macro 'TX_INTR_ID'
  Status = SetupIntrSystem(&Intc, &AxiDma, TX_INTR_ID,
                                           ^
../src/xaxidma_multichan_sg_intr.c:142:21: error: 'XPAR_FABRIC_AXIDMA_0_S2MM_INTROUT_VEC_ID' undeclared (first use in this function)
 #define RX_INTR_ID  XPAR_FABRIC_AXIDMA_0_S2MM_INTROUT_VEC_ID
                     ^
../src/xaxidma_multichan_sg_intr.c:343:6: note: in expansion of macro 'RX_INTR_ID'
      RX_INTR_ID, 1);
      ^
make: *** [src/xaxidma_multichan_sg_intr.o] Error 1

16:57:17 Build Finished (took 883ms)

